# tactical-command-terminal

./: .gitignore  DOCUMENTATION.md  LORE.md  PLAN.md  QWEN.md  README.md  main.py  pyproject.toml  requirements.txt  test_deploy.py  test_deploy2.py
data/cards/: advanced_combat.json  cc_advanced.json  cc_tactical.json  combat.json  elite_directives.json  fsa_advanced.json  fsa_tactical.json  movement.json  rebel_advanced.json  rebel_tactical.json  repair.json  utility.json
data/equipment/: all_equipment.json
data/mechs/: cc_frames.json  fsa_frames.json  rebel_frames.json
data/pilots/: operator_types.json
src/: __init__.py  config.py  game.py  game_flow.py
src/core/: __init__.py  audio.py  effects.py  monitor_frame.py  terminal.py  transitions.py
src/models/: __init__.py  campaign.py  card.py  data_loader.py  encounter.py  equipment.py  faction.py  grid.py  grid_layouts.py  mech.py  missions.py  pilot.py
src/screens/: __init__.py  base_screen.py  boot_screen.py  combat.py  event_screen.py  floor_select.py  floor_transition.py  game_over.py  main_menu.py  mech_select.py  merchant.py  pause_screen.py  reward.py  ship_menu.py  transition_screen.py  victory.py
src/systems/: __init__.py  ai.py  combat.py  comms.py  (+9 more)
tests/: __init__.py  conftest.py  test_card_linkages.py  test_combat.py  test_combat_comms.py  test_config.py  test_deckbuilder.py  test_directives.py  test_effects.py  test_game.py  test_grid_campaign.py  test_grid_missions.py  test_los.py  test_main.py  test_models.py  test_monitor_frame.py  test_narrative.py  test_new_features.py  test_progression.py  test_save_load.py  test_screens.py  test_terminal.py  test_typing_text.py  test_ui.py
(+11 files in other folders)
