[project]
name = "tactical-command-terminal"
version = "0.1.0"
description = "Turn-based mech deckbuilder with degraded CRT terminal aesthetic"
requires-python = ">=3.10"
dependencies = [
    "pygame-ce>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",       # pycodestyle errors
    "F",       # pyflakes
    "W",       # pycodestyle warnings
    "I",       # isort
    "N",       # pep8-naming
    "UP",      # pyupgrade
    "B",       # flake8-bugbear
    "SIM",     # flake8-simplify
    "RUF",     # ruff-specific rules
]
ignore = [
    "E501",    # line length handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "src.core.audio"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.game_flow"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.screens.mech_select"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.screens.ship_menu"
ignore_errors = true
